--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,31 +1,19 @@
+body {
+  background-color: #fcf7f3;
+}
+
 .App {
   text-align: center;
+  margin: auto;
+
+  min-height: 100vh;
+  min-width: 50em;
+  max-width: 50em;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
