--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,3 @@
 body {
-  background-color: #fcf7f3;
-}
-
-.App {
-  text-align: center;
-  margin: auto;
-
-  min-width: 36em;
-  max-width: 36em;
-}
-
-.App-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 60vmin;
+    /*background-color: #fcf7f3;*/
 }
