--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,14 @@
 body {
-    /*background-color: #fcf7f3;*/
+    /*background-color: #f5f5f5;*/
+    background-color: #001E3C;
+    /* rgb(104, 103, 29); */
+    /* #bb9f67 */
+    font-family: "Times New Roman", serif;
 }
+
+/*.css-bhp9pd-MuiPaper-root-MuiCard-root {*/
+/*    background-image: url("../images/loveshoot-lr-044-3.png");*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: bottom;*/
+/*    background-color: #F5F5F6;*/
+/*}*/
